--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@android:color/holo_blue_light">
+        android:background="@color/colorPrimary">
 
         <TextView
             android:id="@+id/competition"
@@ -20,19 +20,35 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="4dp"
-            android:textSize="14sp"/>
+            android:layout_marginTop="8dp"
+            android:textSize="14sp"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal"/>
 
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/home_logo"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/score"
+            android:layout_marginEnd="60dp"
+            android:scaleType="fitXY"
+            tools:src="@drawable/manunited"
+            android:contentDescription="home team logo"/>
 
         <TextView
             android:id="@+id/home_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_launcher_foreground"
             tools:text="Manchester United"
-            app:layout_constraintTop_toBottomOf="@+id/competition"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/home_logo"
+            app:layout_constraintRight_toLeftOf="@id/score"
+            android:textColor="@android:color/white"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginTop="4dp"
+            android:gravity="center_horizontal"/>
 
         <TextView
             android:id="@+id/score"
@@ -40,20 +56,35 @@
             android:layout_height="wrap_content"
             tools:text="4 - 2"
             android:textSize="40sp"
-            app:layout_constraintLeft_toRightOf="@+id/home_team"
-            app:layout_constraintRight_toLeftOf="@id/away_team"
-            app:layout_constraintTop_toBottomOf="@id/home_team"
-            app:layout_constraintBottom_toTopOf="@id/home_team"/>
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/home_logo"
+            app:layout_constraintBottom_toTopOf="@id/home_logo"
+            android:textColor="@android:color/white"/>
+
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:id="@+id/away_logo"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/score"
+            android:layout_marginStart="60dp"
+            tools:src="@drawable/leicestercity"
+            android:scaleType="fitXY"
+            android:contentDescription="away team logo"/>
 
         <TextView
             android:id="@+id/away_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@drawable/ic_launcher_foreground"
             tools:text="Leicester City"
-            app:layout_constraintTop_toBottomOf="@+id/competition"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="4dp"/>
+            app:layout_constraintTop_toBottomOf="@+id/away_logo"
+            app:layout_constraintRight_toRightOf="@id/away_logo"
+            android:textColor="@android:color/white"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="40dp"
+            android:gravity="center_horizontal"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
