--- a/app/src/main/res/layout/commentary_list_item.xml
+++ b/app/src/main/res/layout/commentary_list_item.xml
@@ -18,6 +18,7 @@
             android:id="@+id/time"
             tools:text="40'"
             android:textSize="16sp"
+            android:gravity="center"
             android:layout_gravity="center"/>
 
         <TextView
@@ -27,7 +28,9 @@
             tools:text="GOAL"
             android:padding="2dp"
             android:layout_marginStart="8dp"
-            android:textSize="14sp"
+            android:textSize="12sp"
+            android:textColor="@android:color/white"
+            android:gravity="center_horizontal"
             android:layout_gravity="center"/>
 
         <TextView
