--- a/app/src/main/res/layout/fragment_line_up.xml
+++ b/app/src/main/res/layout/fragment_line_up.xml
@@ -15,33 +15,35 @@
         app:layout_constraintGuide_percent="0.5" />
 
     <TextView
+        android:id="@+id/home_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/home_team"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/guideline"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
         tools:text="Manchester United"/>
 
     <TextView
+        android:id="@+id/away_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/away_team"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/guideline"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
         tools:text="Leicester City"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/home_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/home_list"
         app:layout_constraintTop_toBottomOf="@id/home_team"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,9 +51,9 @@
         app:layout_constraintRight_toLeftOf="@id/guideline" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/away_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/away_list"
         app:layout_constraintTop_toBottomOf="@id/away_team"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
