--- a/app/src/main/res/layout/fragment_commentary.xml
+++ b/app/src/main/res/layout/fragment_commentary.xml
@@ -4,6 +4,7 @@
     android:id="@+id/commRecyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     tools:context=".ui.CommentaryFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
