--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -4,5 +4,6 @@
     android:id="@+id/events_recyclerView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="8dp"
     tools:context=".ui.EventsFragment">
 </androidx.recyclerview.widget.RecyclerView>
