--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,14 +32,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toLeftOf="@id/score"
-            android:layout_marginEnd="60dp"
+            android:layout_marginEnd="48dp"
             android:scaleType="fitXY"
             tools:src="@drawable/manunited"
             android:contentDescription="@string/home_logo_content_desc"/>
 
         <TextView
             android:id="@+id/home_team"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             tools:text="Manchester United"
             app:layout_constraintTop_toBottomOf="@+id/home_logo"
@@ -54,7 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="4 - 2"
-            android:textSize="40sp"
+            android:textSize="36sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -68,14 +68,14 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/score"
-            android:layout_marginStart="60dp"
+            android:layout_marginStart="48dp"
             tools:src="@drawable/leicestercity"
             android:scaleType="fitXY"
             android:contentDescription="@string/away_logo_content_desc"/>
 
         <TextView
             android:id="@+id/away_team"
-            android:layout_width="wrap_content"
+            android:layout_width="120dp"
             android:layout_height="wrap_content"
             tools:text="Leicester City"
             app:layout_constraintTop_toBottomOf="@+id/away_logo"
