--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,97 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.MainActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <View
+        android:id="@+id/score_view"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:background="@color/colorPrimary">
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/colorPrimary"/>
 
-        <TextView
-            android:id="@+id/competition"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Premier League 2019"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="8dp"
-            android:textSize="14sp"
-            android:textColor="@android:color/white"
-            android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/competition"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="Premier League 2019"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:textSize="14sp"
+        android:textColor="@android:color/white"
+        android:gravity="center_horizontal"/>
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/home_logo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/score"
-            android:layout_marginEnd="48dp"
-            android:scaleType="fitXY"
-            tools:src="@drawable/manunited"
-            android:contentDescription="@string/home_logo_content_desc"/>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/home_logo"
+        app:layout_constraintTop_toTopOf="@id/score_view"
+        app:layout_constraintBottom_toBottomOf="@id/score_view"
+        app:layout_constraintRight_toLeftOf="@id/score"
+        android:layout_marginEnd="60dp"
+        android:scaleType="fitXY"
+        tools:src="@drawable/manunited"
+        android:contentDescription="@string/home_logo_content_desc"/>
 
-        <TextView
-            android:id="@+id/home_team"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            tools:text="Manchester United"
-            app:layout_constraintTop_toBottomOf="@+id/home_logo"
-            app:layout_constraintLeft_toRightOf="@id/home_logo"
-            app:layout_constraintRight_toLeftOf="@id/home_logo"
-            android:textColor="@android:color/white"
-            android:layout_marginTop="4dp"
-            android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/home_team"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        tools:text="Manchester United"
+        app:layout_constraintTop_toBottomOf="@+id/home_logo"
+        app:layout_constraintLeft_toRightOf="@id/home_logo"
+        app:layout_constraintRight_toLeftOf="@id/home_logo"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"/>
 
-        <TextView
-            android:id="@+id/score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="4 - 2"
-            android:textSize="36sp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:textColor="@android:color/white"/>
+    <TextView
+        android:id="@+id/score"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="4 - 2"
+        android:textSize="40sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/score_view"
+        app:layout_constraintBottom_toBottomOf="@id/score_view"
+        android:textColor="@android:color/white"/>
 
-        <ImageView
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:id="@+id/away_logo"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/score"
-            android:layout_marginStart="48dp"
-            tools:src="@drawable/leicestercity"
-            android:scaleType="fitXY"
-            android:contentDescription="@string/away_logo_content_desc"/>
+    <ImageView
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:id="@+id/away_logo"
+        app:layout_constraintTop_toTopOf="@id/score_view"
+        app:layout_constraintBottom_toBottomOf="@id/score_view"
+        app:layout_constraintLeft_toRightOf="@id/score"
+        android:layout_marginStart="60dp"
+        tools:src="@drawable/leicestercity"
+        android:scaleType="fitXY"
+        android:contentDescription="@string/away_logo_content_desc"/>
 
-        <TextView
-            android:id="@+id/away_team"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            tools:text="Leicester City"
-            app:layout_constraintTop_toBottomOf="@+id/away_logo"
-            app:layout_constraintLeft_toRightOf="@id/away_logo"
-            app:layout_constraintRight_toLeftOf="@id/away_logo"
-            android:layout_marginTop="4dp"
-            android:textColor="@android:color/white"
-            android:gravity="center_horizontal"/>
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/away_team"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        tools:text="Leicester City"
+        app:layout_constraintTop_toBottomOf="@+id/away_logo"
+        app:layout_constraintLeft_toRightOf="@id/away_logo"
+        app:layout_constraintRight_toLeftOf="@id/away_logo"
+        android:layout_marginTop="4dp"
+        android:textColor="@android:color/white"
+        android:gravity="center_horizontal"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@id/score_view"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/matchTabLayout"
@@ -103,4 +104,4 @@
 
     </androidx.viewpager.widget.ViewPager>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
