--- a/app/src/main/res/layout/fragment_line_up.xml
+++ b/app/src/main/res/layout/fragment_line_up.xml
@@ -8,7 +8,7 @@
 
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
+        android:id="@+id/vertical_centre_guideline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/guideline"
+        app:layout_constraintRight_toLeftOf="@id/vertical_centre_guideline"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
@@ -34,7 +34,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/guideline"
+        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline"
         android:textSize="18sp"
         android:textColor="@color/colorPrimary"
         android:textStyle="bold"
@@ -48,7 +48,7 @@
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/guideline" />
+        app:layout_constraintRight_toLeftOf="@id/vertical_centre_guideline" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/away_list"
@@ -58,14 +58,14 @@
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/guideline" />
+        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline" />
 
     <View
         android:layout_width="1dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="@id/home_list"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="@id/guideline"
+        app:layout_constraintLeft_toLeftOf="@id/vertical_centre_guideline"
         android:background="@color/indigo"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
