--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -5,5 +5,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="8dp"
-    tools:context=".ui.EventsFragment">
+    tools:context=".ui.events.EventsFragment">
 </androidx.recyclerview.widget.RecyclerView>
