--- a/app/src/main/res/layout/fragment_commentary.xml
+++ b/app/src/main/res/layout/fragment_commentary.xml
@@ -5,6 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="8dp"
-    tools:context=".ui.CommentaryFragment">
+    tools:context=".ui.commentary.CommentaryFragment">
 
 </androidx.recyclerview.widget.RecyclerView>
