--- a/app/src/main/res/layout/fragment_line_up.xml
+++ b/app/src/main/res/layout/fragment_line_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.LineUpFragment">
+    tools:context=".ui.lineups.LineUpFragment">
 
 
     <androidx.constraintlayout.widget.Guideline
