--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center"
             android:layout_marginStart="4dp"
             android:scaleType="fitXY"
-            tools:src="@drawable/manunited"
+            tools:background="@color/green"
             android:contentDescription="@string/team_logo_content_desc"/>
 
         <TextView
