tidy up dependencies and layouts
Signed-off-by: Yogesh Buradkar <yogesh.buradkar@gmail.com>

--- a/app/src/main/res/layout/stats_list_item.xml
+++ b/app/src/main/res/layout/stats_list_item.xml
@@ -31,7 +31,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             tools:text="50%"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:gravity="center"
             android:background="@color/blue"/>
 
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textSize="14sp"
             tools:text="50%"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:gravity="center"
             android:background="@color/indigo"/>
 
