--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <View
         android:id="@+id/score_view"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="160dp"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:background="@color/colorPrimary"/>
 
     <TextView
@@ -21,9 +23,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:textSize="14sp"
-        android:textColor="@android:color/white"
+        android:layout_marginTop="16dp"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:textColor="@color/yellow"
         android:gravity="center_horizontal"/>
 
     <ImageView
@@ -34,19 +37,20 @@
         app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintRight_toLeftOf="@id/score"
         android:layout_marginEnd="60dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         tools:background="@color/green"
         android:contentDescription="@string/home_logo_content_desc"/>
 
     <TextView
         android:id="@+id/home_team"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="120dp"
         tools:text="Manchester United"
         app:layout_constraintTop_toBottomOf="@+id/home_logo"
         app:layout_constraintLeft_toRightOf="@id/home_logo"
         app:layout_constraintRight_toLeftOf="@id/home_logo"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:layout_marginTop="4dp"
         android:gravity="center_horizontal"/>
 
@@ -60,7 +64,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/score_view"
         app:layout_constraintBottom_toBottomOf="@id/score_view"
-        android:textColor="@android:color/white"/>
+        android:textColor="@color/white"/>
 
     <ImageView
         android:layout_width="60dp"
@@ -76,21 +80,24 @@
 
     <TextView
         android:id="@+id/away_team"
-        android:layout_width="100dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="120dp"
         tools:text="Leicester City"
         app:layout_constraintTop_toBottomOf="@+id/away_logo"
         app:layout_constraintLeft_toRightOf="@id/away_logo"
         app:layout_constraintRight_toLeftOf="@id/away_logo"
         android:layout_marginTop="4dp"
-        android:textColor="@android:color/white"
+        android:textColor="@color/white"
         android:gravity="center_horizontal"/>
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/score_view"
         app:layout_constraintBottom_toBottomOf="parent">
 
@@ -98,9 +105,8 @@
             android:id="@+id/matchTabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:tabMode="scrollable">
-
-        </com.google.android.material.tabs.TabLayout>
+            app:tabMode="scrollable"
+            />
 
     </androidx.viewpager.widget.ViewPager>
 
