--- a/app/src/main/res/layout/commentary_list_item.xml
+++ b/app/src/main/res/layout/commentary_list_item.xml
@@ -9,7 +9,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         android:padding="4dp">
 
         <TextView
@@ -29,7 +28,7 @@
             android:padding="2dp"
             android:layout_marginStart="8dp"
             android:textSize="12sp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:gravity="center_horizontal"
             android:layout_gravity="center"/>
 
@@ -48,6 +47,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@color/grey"/>
 
 </LinearLayout>
