--- a/app/src/main/res/layout/event_list_item.xml
+++ b/app/src/main/res/layout/event_list_item.xml
@@ -38,7 +38,7 @@
             android:padding="2dp"
             android:layout_marginStart="12dp"
             android:textSize="12sp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
             android:gravity="center_horizontal"
             android:layout_gravity="center"/>
 
@@ -57,6 +57,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@color/grey"/>
 
 </LinearLayout>
