--- a/app/src/main/res/layout/line_up_list_item.xml
+++ b/app/src/main/res/layout/line_up_list_item.xml
@@ -45,6 +45,6 @@
         android:layout_marginTop="4dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
-        android:background="@android:color/darker_gray"/>
+        android:background="@color/grey"/>
 
 </RelativeLayout>
