--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="pink">#E97CA1</color>
     <color name="brown">#7E4F48</color>
     <color name="dark_green">#009688</color>
+    <color name="white">#FFFFFF</color>
 </resources>
