--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,32 @@
         android:textStyle="bold"
         android:textColor="@color/yellow"
         android:gravity="center_horizontal"/>
+    
+    <ImageView
+        android:id="@+id/leftButton"
+        android:layout_width="20dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_chevron_left_24px"
+        android:tint="@color/yellow"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/home_logo"
+        app:layout_constraintBottom_toBottomOf="@id/home_logo"
+        android:layout_marginStart="8dp"
+        />
+
+    <ImageView
+        android:id="@+id/rightButton"
+        android:layout_width="20dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_chevron_right_24px"
+        android:tint="@color/yellow"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/home_logo"
+        app:layout_constraintBottom_toBottomOf="@id/home_logo"
+        android:layout_marginEnd="8dp"
+        />
 
     <ImageView
         android:layout_width="60dp"
@@ -36,7 +62,7 @@
         app:layout_constraintTop_toTopOf="@id/score_view"
         app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintRight_toLeftOf="@id/score"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="48dp"
         android:scaleType="centerInside"
         tools:background="@color/green"
         android:contentDescription="@string/home_logo_content_desc"/>
@@ -73,7 +99,7 @@
         app:layout_constraintTop_toTopOf="@id/score_view"
         app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintLeft_toRightOf="@id/score"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="48dp"
         android:scaleType="fitXY"
         tools:background="@color/green"
         android:contentDescription="@string/away_logo_content_desc"/>
