--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,12 +34,13 @@
         android:layout_width="20dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_chevron_left_24px"
-        android:tint="@color/yellow"
+        app:tint="@color/yellow"
         android:scaleType="fitXY"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/home_logo"
         app:layout_constraintBottom_toBottomOf="@id/home_logo"
         android:layout_marginStart="8dp"
+        android:contentDescription="@string/left_button_content_desc"
         />
 
     <ImageView
@@ -47,12 +48,13 @@
         android:layout_width="20dp"
         android:layout_height="40dp"
         android:src="@drawable/ic_chevron_right_24px"
-        android:tint="@color/yellow"
+        app:tint="@color/yellow"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/home_logo"
         app:layout_constraintBottom_toBottomOf="@id/home_logo"
         android:layout_marginEnd="8dp"
+        android:contentDescription="@string/right_button_content_description"
         />
 
     <ImageView
