apply code styles and tidy up test
Signed-off-by: Yogesh Buradkar <yogesh.buradkar@gmail.com>

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,133 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MainActivity">
+    tools:context=".ui.main.MainActivity"
+    >
 
     <View
         android:id="@+id/score_view"
         android:layout_width="0dp"
         android:layout_height="160dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:background="@color/colorPrimary"
         app:layout_constraintEnd_toEndOf="parent"
-        android:background="@color/colorPrimary"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/competition"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Premier League 2019"
+        android:layout_marginTop="16dp"
+        android:gravity="center_horizontal"
+        android:textColor="@color/yellow"
+        android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:textSize="12sp"
-        android:textStyle="bold"
-        android:textColor="@color/yellow"
-        android:gravity="center_horizontal"/>
-    
+        tools:text="Premier League 2019"
+        />
+
     <ImageView
         android:id="@+id/leftButton"
         android:layout_width="20dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_chevron_left_24px"
-        app:tint="@color/yellow"
-        android:scaleType="fitXY"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/home_logo"
-        app:layout_constraintBottom_toBottomOf="@id/home_logo"
         android:layout_marginStart="8dp"
         android:contentDescription="@string/left_button_content_desc"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_chevron_left_24px"
+        app:layout_constraintBottom_toBottomOf="@id/home_logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/home_logo"
+        app:tint="@color/yellow"
         />
 
     <ImageView
         android:id="@+id/rightButton"
         android:layout_width="20dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_chevron_right_24px"
-        app:tint="@color/yellow"
-        android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/home_logo"
-        app:layout_constraintBottom_toBottomOf="@id/home_logo"
         android:layout_marginEnd="8dp"
         android:contentDescription="@string/right_button_content_description"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_chevron_right_24px"
+        app:layout_constraintBottom_toBottomOf="@id/home_logo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/home_logo"
+        app:tint="@color/yellow"
         />
 
     <ImageView
+        android:id="@+id/home_logo"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/home_logo"
-        app:layout_constraintTop_toTopOf="@id/score_view"
+        android:layout_marginEnd="48dp"
+        android:contentDescription="@string/home_logo_content_desc"
+        android:scaleType="centerInside"
         app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintRight_toLeftOf="@id/score"
-        android:layout_marginEnd="48dp"
-        android:scaleType="centerInside"
+        app:layout_constraintTop_toTopOf="@id/score_view"
         tools:background="@color/green"
-        android:contentDescription="@string/home_logo_content_desc"/>
+        />
 
     <TextView
         android:id="@+id/home_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"
         android:maxWidth="120dp"
-        tools:text="Manchester United"
-        app:layout_constraintTop_toBottomOf="@+id/home_logo"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toRightOf="@id/home_logo"
         app:layout_constraintRight_toLeftOf="@id/home_logo"
-        android:textColor="@color/white"
-        android:layout_marginTop="4dp"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/home_logo"
+        tools:text="Manchester United"
+        />
 
     <TextView
         android:id="@+id/score"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="4 - 2"
+        android:textColor="@color/white"
         android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/score_view"
-        app:layout_constraintBottom_toBottomOf="@id/score_view"
-        android:textColor="@color/white"/>
+        tools:text="4 - 2"
+        />
 
     <ImageView
+        android:id="@+id/away_logo"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:id="@+id/away_logo"
-        app:layout_constraintTop_toTopOf="@id/score_view"
+        android:layout_marginStart="48dp"
+        android:contentDescription="@string/away_logo_content_desc"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="@id/score_view"
         app:layout_constraintLeft_toRightOf="@id/score"
-        android:layout_marginStart="48dp"
-        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="@id/score_view"
         tools:background="@color/green"
-        android:contentDescription="@string/away_logo_content_desc"/>
+        />
 
     <TextView
         android:id="@+id/away_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center_horizontal"
         android:maxWidth="120dp"
-        tools:text="Leicester City"
-        app:layout_constraintTop_toBottomOf="@+id/away_logo"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toRightOf="@id/away_logo"
         app:layout_constraintRight_toLeftOf="@id/away_logo"
-        android:layout_marginTop="4dp"
-        android:textColor="@color/white"
-        android:gravity="center_horizontal"/>
+        app:layout_constraintTop_toBottomOf="@+id/away_logo"
+        tools:text="Leicester City"
+        />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewPager"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/score_view"
-        app:layout_constraintBottom_toBottomOf="parent">
+        >
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/matchTabLayout"
