--- a/app/src/main/res/layout/fragment_line_up.xml
+++ b/app/src/main/res/layout/fragment_line_up.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.lineups.LineUpFragment">
+    tools:context=".ui.lineups.LineUpFragment"
+    >
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -12,60 +14,66 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.5" />
+        app:layout_constraintGuide_percent="0.5"
+        />
 
     <TextView
         android:id="@+id/home_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/vertical_centre_guideline"
-        android:layout_marginTop="8dp"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimary"
-        android:textStyle="bold"
-        tools:text="Manchester United"/>
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Manchester United"
+        />
 
     <TextView
         android:id="@+id/away_team"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline"
         android:layout_marginTop="8dp"
-        android:textSize="18sp"
         android:textColor="@color/colorPrimary"
+        android:textSize="18sp"
         android:textStyle="bold"
-        tools:text="Leicester City"/>
+        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Leicester City"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/home_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/home_team"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/vertical_centre_guideline" />
+        app:layout_constraintRight_toLeftOf="@id/vertical_centre_guideline"
+        app:layout_constraintTop_toBottomOf="@id/home_team"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/away_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/away_team"
         android:layout_marginTop="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/vertical_centre_guideline" />
+        app:layout_constraintTop_toBottomOf="@id/away_team"
+        />
 
     <View
         android:layout_width="1dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="@id/home_list"
+        android:background="@color/indigo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/vertical_centre_guideline"
-        android:background="@color/indigo"/>
+        app:layout_constraintTop_toTopOf="@id/home_list"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
