--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,42 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.stats.StatsFragment">
+    tools:context=".ui.stats.StatsFragment"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="horizontal"
+        >
 
         <View
             android:layout_width="16dp"
             android:layout_height="16dp"
-            android:background="@color/blue"/>
+            android:background="@color/blue"
+            />
 
         <TextView
             android:id="@+id/home_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             tools:text="Manchester United"
-            android:layout_marginStart="4dp"/>
+            />
 
         <View
             android:layout_width="16dp"
             android:layout_height="16dp"
+            android:layout_marginStart="16dp"
             android:background="@color/indigo"
-            android:layout_marginStart="16dp"/>
+            />
 
         <TextView
             android:id="@+id/away_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             tools:text="Leicester City"
-            android:layout_marginStart="4dp"/>
+            />
 
     </LinearLayout>
 
@@ -44,7 +51,8 @@
         android:id="@+id/stats_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
-        android:layout_marginTop="16dp"/>
+        />
 
 </LinearLayout>
