--- a/app/src/main/res/layout/line_up_list_item.xml
+++ b/app/src/main/res/layout/line_up_list_item.xml
@@ -1,50 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
 
     <TextView
+        android:id="@+id/shirt_number"
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:id="@+id/shirt_number"
         android:layout_alignParentTop="true"
         android:layout_centerVertical="true"
+        android:gravity="center_horizontal"
+        android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
-        android:gravity="center_horizontal"
-        tools:text="23"/>
+        tools:text="23"
+        />
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:id="@+id/name"
-        android:layout_toEndOf="@id/shirt_number"
-        android:layout_marginStart="4dp"
-        android:layout_alignParentEnd="true"
-        android:textSize="16sp"
-        android:textColor="@color/black"
-        tools:text="Juan Mata"/>
-
-    <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="4dp"
+        android:layout_toEndOf="@id/shirt_number"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        tools:text="Juan Mata"
+        />
+
+    <TextView
         android:id="@+id/position"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/name"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="6dp"
         android:layout_toEndOf="@id/shirt_number"
-        android:layout_alignParentEnd="true"
         android:textSize="12sp"
         android:textStyle="italic"
-        tools:text="Striker"/>
+        tools:text="Striker"
+        />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignBottom="@id/position"
-        android:layout_marginTop="4dp"
         android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="4dp"
-        android:background="@color/grey"/>
+        android:background="@color/grey"
+        />
 
 </RelativeLayout>
