--- a/app/src/main/res/layout/stats_list_item.xml
+++ b/app/src/main/res/layout/stats_list_item.xml
@@ -1,50 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="4dp"
     android:layout_marginStart="8dp"
+    android:layout_marginTop="4dp"
     android:layout_marginEnd="8dp"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/stat_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:text="Possession"
         android:gravity="center"
-        android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="16sp"
-        android:textColor="@color/black"/>
+        android:textStyle="bold"
+        tools:text="Possession"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:orientation="horizontal"
-        android:layout_marginTop="4dp">
+        >
 
         <TextView
             android:id="@+id/home_stat"
             android:layout_width="0dp"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@color/blue"
+            android:gravity="center"
+            android:textColor="@color/white"
             android:textSize="14sp"
             tools:text="50%"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:background="@color/blue"/>
+            />
 
         <TextView
             android:id="@+id/away_stat"
             android:layout_width="0dp"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:background="@color/indigo"
+            android:gravity="center"
+            android:textColor="@color/white"
             android:textSize="14sp"
             tools:text="50%"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:background="@color/indigo"/>
+            />
 
     </LinearLayout>
 
