--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -1,58 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.stats.StatsFragment"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <View
+        android:id="@+id/homeTeamLegend"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:background="@color/blue"
+        app:layout_constraintBottom_toBottomOf="@id/homeTeam"
+        app:layout_constraintEnd_toStartOf="@id/homeTeam"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/homeTeam"
+        />
+
+    <TextView
+        android:id="@+id/homeTeam"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
         android:layout_marginTop="16dp"
-        android:gravity="center"
+        app:layout_constraintEnd_toStartOf="@+id/awayTeamLegend"
+        app:layout_constraintStart_toEndOf="@id/homeTeamLegend"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Manchester United"
+        />
+
+    <View
+        android:id="@+id/awayTeamLegend"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginStart="16dp"
+        android:background="@color/indigo"
+        app:layout_constraintBottom_toBottomOf="@id/homeTeam"
+        app:layout_constraintEnd_toStartOf="@id/awayTeam"
+        app:layout_constraintStart_toEndOf="@id/homeTeam"
+        app:layout_constraintTop_toTopOf="@id/homeTeam"
+        />
+
+    <TextView
+        android:id="@+id/awayTeam"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        app:layout_constraintBottom_toBottomOf="@id/awayTeamLegend"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/awayTeamLegend"
+        app:layout_constraintTop_toTopOf="@id/awayTeamLegend"
+        tools:text="Leicester City"
+        />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/legendBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:orientation="horizontal"
-        >
-
-        <View
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:background="@color/blue"
-            />
-
-        <TextView
-            android:id="@+id/home_team"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            tools:text="Manchester United"
-            />
-
-        <View
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="16dp"
-            android:background="@color/indigo"
-            />
-
-        <TextView
-            android:id="@+id/away_team"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            tools:text="Leicester City"
-            />
-
-    </LinearLayout>
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="awayTeam, awayTeamLegend, homeTeam, homeTeamLegend"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/stats_list"
-        android:layout_width="match_parent"
+        android:id="@+id/statsRv"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="16dp"
         android:layout_weight="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/legendBarrier"
         />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
