minor layout tidy up
Signed-off-by: Yogesh Buradkar <yogesh.buradkar@gmail.com>

--- a/app/src/main/res/layout/fragment_line_up.xml
+++ b/app/src/main/res/layout/fragment_line_up.xml
@@ -8,7 +8,6 @@
     tools:context=".ui.lineups.LineUpFragment"
     >
 
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/vertical_centre_guideline"
         android:layout_width="wrap_content"
@@ -46,7 +45,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_list"
+        android:id="@+id/homeLineUp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
@@ -57,7 +56,7 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/away_list"
+        android:id="@+id/awayLineUp"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="12dp"
@@ -73,7 +72,7 @@
         android:background="@color/indigo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="@id/vertical_centre_guideline"
-        app:layout_constraintTop_toTopOf="@id/home_list"
+        app:layout_constraintTop_toTopOf="@id/homeTeam"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
