--- a/app/src/main/res/layout/stats_list_item.xml
+++ b/app/src/main/res/layout/stats_list_item.xml
@@ -1,52 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
-    android:layout_marginTop="4dp"
-    android:layout_marginEnd="8dp"
-    android:orientation="vertical"
+    android:layout_marginStart="16dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
+    android:padding="8dp"
     >
 
     <TextView
-        android:id="@+id/stat_name"
-        android:layout_width="match_parent"
+        android:id="@+id/statName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
         android:textColor="@color/black"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Possession"
         />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/statName"
         >
 
         <TextView
-            android:id="@+id/home_stat"
+            android:id="@+id/homeStat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@color/blue"
             android:gravity="center"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             tools:text="50%"
             />
 
         <TextView
-            android:id="@+id/away_stat"
+            android:id="@+id/awayStat"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:background="@color/indigo"
             android:gravity="center"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
             android:textColor="@color/white"
             android:textSize="14sp"
             tools:text="50%"
@@ -54,4 +64,4 @@
 
     </LinearLayout>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
