rename package from ui to features
Signed-off-by: Yogesh Buradkar <yogesh.buradkar@gmail.com>

--- a/app/src/main/res/layout/fragment_commentary.xml
+++ b/app/src/main/res/layout/fragment_commentary.xml
@@ -6,5 +6,5 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="8dp"
-    tools:context=".ui.commentary.CommentaryFragment"
+    tools:context=".features.commentary.CommentaryFragment"
     />
