--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="8dp"
-        tools:context=".ui.events.EventsFragment"
+        tools:context=".features.events.EventsFragment"
         />
 
 </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
