--- a/app/src/main/res/layout/fragment_stats.xml
+++ b/app/src/main/res/layout/fragment_stats.xml
@@ -7,7 +7,7 @@
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.stats.StatsFragment"
+    tools:context=".features.stats.StatsFragment"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
